unpackaged/main/default/objects/Renewal_Reminder_Log__c/Renewal_Reminder_Log__c.object-meta.xml
<CustomObject>
    <description>Stores the logs for renewal application reminders that get sent out to members.</description>
    <label>Renewal Reminder Log</label>
    <nameField>
        <displayFormat>RR-{0000}</displayFormat>
        <label>Log Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Renewal Reminder Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>