unpackaged/main/default/objects/Renewal_Reminder_Log__c/fields/Error_Message__c.field-meta.xml
<CustomField>
    <fullName>Error_Message__c</fullName>
    <description>Error message text.</description>
    <inlineHelpText>Error message text.</inlineHelpText>
    <label>Error Message</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>