unpackaged/main/default/objects/Renewal_Reminder_Log__c/fields/Fields__c.field-meta.xml
<CustomField>
    <fullName>Fields__c</fullName>
    <description>Identifies which fields in the object, if any, affected the error condition.</description>
    <inlineHelpText>Identifies which fields in the object, if any, affected the error condition.</inlineHelpText>
    <label>Fields</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>