unpackaged/main/default/objects/Renewal_Reminder_Log__c/fields/Reminder_Name__c.field-meta.xml
<CustomField>
    <fullName>Reminder_Name__c</fullName>
    <label>Reminder Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>