unpackaged/main/default/objects/Renewal_Reminder_Log__c/fields/Status_Code__c.field-meta.xml
<CustomField>
    <fullName>Status_Code__c</fullName>
    <description>A code that characterizes the error.</description>
    <inlineHelpText>A code that characterizes the error.</inlineHelpText>
    <label>Status Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>