unpackaged/main/default/objects/Renewal_Reminder_Log__c/fields/Target_Object_Id__c.field-meta.xml
<CustomField>
    <fullName>Target_Object_Id__c</fullName>
    <description>The object ID of the target for which the reminder occurred.</description>
    <inlineHelpText>The object ID of the target for which the reminder occurred.</inlineHelpText>
    <label>Target Object Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>