unpackaged/main/default/objects/Renewal_Reminder_Log__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Reminder_Name__c</columns>
    <columns>Status__c</columns>
    <columns>Target_Object_Id__c</columns>
    <columns>Error_Message__c</columns>
    <columns>Fields__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>