unpackaged/main/default/objects/Renewal_Reminder_Log__c/listViews/Todays_Logs.listView-meta.xml
<ListView>
    <fullName>Todays_Logs</fullName>
    <columns>NAME</columns>
    <columns>Reminder_Name__c</columns>
    <columns>Status__c</columns>
    <columns>Target_Object_Id__c</columns>
    <columns>Error_Message__c</columns>
    <columns>Fields__c</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATED_DATE</field>
        <operation>equals</operation>
        <value>TODAY</value>
    </filters>
    <label>Todays Logs</label>
</ListView>